--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -11,31 +11,33 @@ env:
 
 
 phases:
-  pre_build:
-    commands:
-    # some...
-    - echo "We prepare to work"
-    - echo "version is - ${VERSION}"
-    - echo "workdir is - ${DIR}"
-    - echo ${CODEBUILD_SRC_DIR}
-    - echo ${CODEBUILD_RESOLVED_SOURCE_VERSION}
-    - echo "go to next step"
-    finally: echo "I'm always run. Even if jobs was falls "
+  # pre_build:
+  #   commands:
+  #   # some...
+  #   - echo "We prepare to work"
+  #   - echo "version is - ${VERSION}"
+  #   - echo "workdir is - ${DIR}"
+  #   - echo ${CODEBUILD_SRC_DIR}
+  #   - echo ${CODEBUILD_RESOLVED_SOURCE_VERSION}
+  #   - echo "go to next step"
+  #   finally: echo "I'm always run. Even if jobs was falls "
 
-  install:
-    commands:
-    # some....
-    - echo "Install environment"
-    - echo "go to next step"
+  # install:
+  #   commands:
+  #   # some....
+  #   - echo "Install environment"
+  #   - echo "go to next step"
 
   build:
     commands:
     # some....
+    - echo "Build with git hooks"
+    - echo ${CODEBUILD_RESOLVED_SOURCE_VERSION}
     - echo "Build application"
     - echo "go to next step"
 
-  post_build:
-    commands:
-    # some...
-    - echo "Send info messages"
-    - echo "finish"
+  # post_build:
+  #   commands:
+  #   # some...
+  #   - echo "Send info messages"
+  #   - echo "finish"
