--- a/hide_buildspec.yml
+++ b/hide_buildspec.yml
@@ -31,7 +31,7 @@ phases:
   build:
     commands:
     # some....
-    - echo Modify buildspek
+    - echo Say somethin about this app.....................=_=
     - echo Build with git hooks
     - echo git commit is - ${CODEBUILD_RESOLVED_SOURCE_VERSION}
     - echo "Build application"
